sidebar has no dots (major likes dots); alignment fixed; top is getting pretty

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,4 +1,3 @@
-
 body {
     height: 100%;
     max-height: 100%;
@@ -21,10 +20,10 @@ body {
 }
 
 .banner-content {
-    width: 90%;
-    padding: 30px 0 23px 0;
+    padding: 20px 0;
     max-width: 1000px;
     margin: 0 auto;
+    background-color: #FFF000;
 }
 
 .blog-logo {
@@ -53,13 +52,14 @@ body {
 .sidebar {
     width: 25%;
     float: left;
+    ul {
+        list-style: none;
+        padding: 0;
+        margin-top: 0;
+    }
 }
 
-.ul {
-    list-style: none;
-    padding: 0;
-    margin-top: 0;
-}
+
 
 @media (max-width: 768px) {
     .content,
